# cpp-template

./: CMakeLists.txt  CMakePresets.json  conanfile.py
cmake/: todoConfig.cmake.in
